finish contact section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <nav class="navigation fat-nav">
     <div class="fat-nav__wrapper">
       <ul>
-        <li><a href="#about">About Me</a></li>
+        <li><a href="#expertise">About Me</a></li>
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#references">References</a></li>
@@ -266,7 +266,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2 class="heading-secondary mb-4 wow fadeInDown">Certificates</h2>
+            <h2 class="heading-secondary mb-5 wow fadeInDown">Certificates</h2>
             <div class="certificates__list">
                 <div class="certificates__list-item mb-4">
                   <div class="certificates__icon-wrapper wow fadeInLeft">
@@ -298,7 +298,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="heading-secondary mb-4 wow fadeInDown">Languages</h2>
+            <h2 class="heading-secondary mb-5 wow fadeInDown">Languages</h2>
             <div class="row wow fadeIn">
               <div class="col-md-3 col-6 mr-5">
                 <div class="circle-progress blue">
@@ -437,6 +437,18 @@
             </blockquote>
           </div>
         </div>
+      </div>
+    </section>
+  
+    <!--Contact-->
+    <section id="contact" class="contact section-box">
+      <div class="container text-center">
+        <h2 class="heading-secondary mb-4 wow fadeInDown">Contact Me</h2>
+        <p class="contact__question">Have a project you'd like to discuss?</p>
+        <p class="wow tada"><i class="icon ion-chatbubbles contact__icon"></i></p>
+        <h3 class="heading-third mb-2">Tien Nguyen</h3>
+        <p class="contact__email">tiennguyen.ftu.k52@gmail.com</p>
+        <a href="mailto:tiennguyen.ftu.k52@gmail.com" class="btn btn--blue btn-lg mt-3">Send Me A Message</a>
       </div>
     </section>
   </main>
