finish footer section

--- a/index.html
+++ b/index.html
@@ -452,6 +452,36 @@
       </div>
     </section>
   </main>
+  
+  <!--Footer-->
+  <footer id="footer" class="footer section-box">
+    <div class="container text-sm-center">
+      <div class="row">
+        <div class="col-md-6">
+          <p>Copyright &copy; Tien Nguyen 2017. All rights reserved.</p>
+        </div>
+        <div class="col-md-6">
+          <ul class="social-list float-md-right">
+            <li class="wow fadeIn" data-wow-delay="0.5s">
+              <a target="_blank" href="https://github.com/tiennguyen-ftu-k52"><i class="devicon-github-original"></i></a>
+            </li>
+            <li class="wow fadeIn" data-wow-delay="1s">
+              <a target="_blank" href="https://gitlab.com/users/tiennguyenftu/projects"><i class="devicon-gitlab-plain"></i></a>
+            </li>
+            <li class="wow fadeIn" data-wow-delay="1.5s">
+              <a target="_blank" href="https://www.linkedin.com/in/tien-nguyen-ftu/"><i class="devicon-linkedin-plain"></i></a>
+            </li>
+            <li class="wow fadeIn" data-wow-delay="2s">
+              <a target="_blank" href="https://www.facebook.com/minh.tien.90260"><i class="devicon-facebook-plain"></i></a>
+            </li>
+            <li class="wow fadeIn" data-wow-delay="2.5s">
+              <a target="_blank" href="https://twitter.com/tiennguyenjvz1?lang=en"><i class="devicon-twitter-plain"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!--Scripts-->
   <script src="js/vendors/jquery-3.2.1.min.js"></script>
   <script src="js/vendors/jquery.fatNav.min.js"></script>
