--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <p>I specialize in front-end (HTML, CSS, Javascript, React), back-end (Node.JS, Express.JS) and also database (NoSQL, MongoDB). I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction.</p>
         </div>
         <div class="header__button-group wow fadeInUp">
-          <a href="pdf/tien-nguyen-resume.pdf" target="_blank" class="btn btn--blue btn-lg mr-4">Download My CV</a>
-          <a href="mailto:tiennguyen.ftu.k52@gmail.com" class="btn btn--orange btn-lg">Hire Me</a>
+          <a href="pdf/tien-nguyen-resume.pdf" target="_blank" class="btn btn--green btn-lg mr-4">Download My CV</a>
+          <a href="mailto:tiennguyen.ftu.k52@gmail.com" class="btn btn--blue btn-lg">Hire Me</a>
         </div>
       </div>
     </div>
@@ -135,14 +135,14 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Web Development</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Mobile App Development</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">CI/CD</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Testing</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Pair Programming</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Agile</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Scrum</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Git</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Web Development</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Mobile App Development</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">CI/CD</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Testing</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Pair Programming</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Agile</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Scrum</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Git</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
@@ -170,9 +170,9 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Software Development</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Desktop App Development</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Web Development</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Software Development</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Desktop App Development</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Web Development</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
@@ -193,15 +193,15 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Node.js</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Express.js</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">MongoDB</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">HTML</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">CSS</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Javascript</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Bootstrap</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">React.js</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Angular.js</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Node.js</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Express.js</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">MongoDB</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">HTML</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">CSS</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Javascript</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Bootstrap</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">React.js</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Angular.js</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
@@ -222,9 +222,9 @@
                 </ul>
                 <h5 class="heading-fifth mb-3">Technologies Involved:</h5>
                 <p>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">iOS Development</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Objective C</span>
-                  <span class="btn btn--small btn--orange mb-3 mr-2">Swift</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">iOS Development</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Objective C</span>
+                  <span class="btn btn--small btn--green mb-3 mr-2">Swift</span>
                 </p>
                 <h5 class="heading-fifth mb-3">Tools:</h5>
                 <p>
@@ -312,7 +312,7 @@
                 </div>
               </div>
               <div class="col-md-3 col-6">
-                <div class="circle-progress orange">
+                <div class="circle-progress green">
                 <span class="progress-left">
                     <span class="progress-bar"></span>
                 </span>
@@ -343,7 +343,7 @@
                     </div>
                     <div class="col-sm-6">
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
@@ -354,7 +354,7 @@
                     </div>
                     <div class="col-sm-6">
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
@@ -365,7 +365,7 @@
                     </div>
                     <div class="col-sm-6">
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
@@ -376,7 +376,7 @@
                     </div>
                     <div class="col-sm-6">
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
@@ -387,7 +387,7 @@
                     </div>
                     <div class="col-sm-6">
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
@@ -398,7 +398,7 @@
                     </div>
                     <div class="col-sm-6">
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--orange">Visit the website</a>
+                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
