restyle projects section

--- a/index.html
+++ b/index.html
@@ -338,76 +338,103 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
                     </div>
-                    <div class="col-sm-6">
-                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">LuminPDF</h3>
+                      <p>LuminPDF is an awesome web application for viewing, editing & sharing PDF files in the cloud. It's currently have a very large amount of users (<strong>over 18 millions</strong>).</p>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>Meteor</strong>, <strong>NodeJS</strong>, <strong>MiniMongo</strong>, <strong>Blaze</strong>, <strong>SASS, CSS</strong>.</p>
+                      <a href="https://www.luminpdf.com/" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">LuminTools</h3>
                       <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>React</strong>, <strong>Redux</strong>, <strong>Meteor</strong>, <strong>Jest</strong>, <strong>Enzyme</strong>.</p>
+                      <a href="https://tools.luminpdf.com/" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
                     </div>
-                    <div class="col-sm-6">
-                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">LuminMobileApp (on progress)</h3>
+                      <p>Lumin Mobile App is a cross-platform mobile app using React Native in the Lumin ecosystem.</p>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>React Native</strong>, <strong>React</strong>, <strong>Redux</strong>, <strong>React Navigation</strong>, <strong>Styled Component</strong>, <strong>Apollo Client</strong>, <strong>Objective-C</strong>, <strong>NodeJS</strong>, <strong>ExpressJS</strong>, <strong>PassportJS</strong>, <strong>JWT</strong>, <strong>Apollo Server</strong>.</p>
+                      <a href="https://www.luminpdf.com/" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
                     </div>
-                    <div class="col-sm-6">
-                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">Camos Kiosk App</h3>
+                      <p>A desktop application written in Electron, which can instantly print polaroid photos from your smartphone gallery, Instagram account or DSLR camera.</p>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>ElectronJS</strong>, <strong>ReactJS</strong>, <strong>Redux</strong>, <strong>Bootstrap</strong>, <strong>NodeJS</strong>, <strong>ExpressJS</strong>.</p>
+                      <a href="https://camos.vn/" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
                     </div>
-                    <div class="col-sm-6">
-                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">Personal Website</h3>
+                      <p>My personal website is in order to show my knowledge & experience for web & app development</p>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>React</strong>, <strong>Redux</strong>, <strong>Recompose</strong>, <strong>Webpack</strong>, <strong>Styled Component</strong>, <strong>SemanticUI</strong>, <strong>Nginx</strong>.</p>
+                      <a href="https://github.com/tiennguyen-ftu-k52/personal-website" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6">
                       <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
                     </div>
-                    <div class="col-sm-6">
-                      <p>LuminTools provides a set of useful tools to help you to control your PDF document, such as convert, compress, split/merge or unlock, etc.</p>
-                      <a href="#" class="btn btn-lg btn--green">Visit the website</a>
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">Vesco</h3>
+                      <p>A beautiful & responsive company portfolio website.</p>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>HTML</strong>, <strong>CSS</strong>, <strong>SASS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>jQuery</strong>.</p>
+                      <a href="https://github.com/tiennguyen-ftu-k52/vesco" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                    </div>
+                    <div class="col-md-6">
+                      <h3 class="heading-third mb-4">Victoria's Secret</h3>
+                      <p>An e-commerce website using NodeJS for learning purpose.</p>
+                      <h4 class="heading-fourth">Technologies</h4>
+                      <p class="mb-5">Code technologies I got involved while working on this project: <strong>NodeJS</strong>, <strong>ExpressJS</strong>, <strong>PassportJS</strong>, <strong>Bootstrap</strong>, <strong>Handlebars</strong>.</p>
+                      <a href="https://t-e-commerce.herokuapp.com/" target="_blank" class="btn btn-lg btn--green">Visit the website</a>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- Add Pagination -->
-              <div class="swiper-pagination"></div>
-              <!-- Add Arrows -->
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
             </div>
           </div>
       </div>
