--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="header__content-box">
       <div class="header__content-box__inner text-center">
         <h1 class="heading-primary mb-4 wow fadeInDown">
-          <span class="heading-primary--main">Hi, I'm Tien</span><br>
+          <span class="heading-primary--main">Hi, I'm Tien.</span><br>
           <span class="heading-primary--sub">Full Stack Developer & Freelancer</span>
         </h1>
         <div class="header__description mb-4 wow fadeInLeft">
@@ -257,7 +257,9 @@
         <div id="tag-cloud" class="skills__tag-cloud m-auto">
           <ul></ul>
         </div>
-        <div class="row skills__wrapper wow fadeInUp"></div>
+        <div class="row skills__wrapper wow fadeInUp">
+        
+        </div>
       </div>
     </section>
     
