finish all sections & responsive layouts

--- a/index.html
+++ b/index.html
@@ -302,28 +302,8 @@
           <div class="col-md-6">
             <h2 class="heading-secondary mb-5 wow fadeInDown">Languages</h2>
             <div class="row wow fadeIn">
-              <div class="col-md-3 col-6 mr-5">
-                <div class="circle-progress blue">
-                <span class="progress-left">
-                    <span class="progress-bar"></span>
-                </span>
-                  <span class="progress-right">
-                    <span class="progress-bar"></span>
-                </span>
-                  <div class="progress-value">Vietnamese</div>
-                </div>
-              </div>
-              <div class="col-md-3 col-6">
-                <div class="circle-progress green">
-                <span class="progress-left">
-                    <span class="progress-bar"></span>
-                </span>
-                  <span class="progress-right">
-                    <span class="progress-bar"></span>
-                </span>
-                  <div class="progress-value">English</div>
-                </div>
-              </div>
+              <img class="language__img" src="images/flags/vietnam.png" alt="vietnamese">
+              <img class="language__img" src="images/flags/england.png" alt="english">
             </div>
           </div>
         </div>
