--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/luminpdf.png" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">LuminPDF</h3>
@@ -369,7 +369,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/lumintools.jpg" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">LuminTools</h3>
@@ -383,7 +383,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/luminapp.png" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">LuminMobileApp (on progress)</h3>
@@ -397,7 +397,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/camos.jpg" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">Camos Kiosk App</h3>
@@ -411,7 +411,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/personal-website.png" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">Personal Website</h3>
@@ -425,7 +425,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/vesco.png" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">Vesco</h3>
@@ -439,7 +439,7 @@
                 <div class="swiper-slide">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="images/projects/lumintools.png" class="img-fluid" alt="luminpdf">
+                      <img src="images/projects/victoria-secret.png" class="img-fluid" alt="luminpdf">
                     </div>
                     <div class="col-md-6">
                       <h3 class="heading-third mb-4">Victoria's Secret</h3>
