--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p>I specialize in front-end (HTML, CSS, Javascript, React), back-end (Node.JS, Express.JS) and also database (NoSQL, MongoDB). I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction.</p>
         </div>
         <div class="header__button-group wow fadeInUp">
-          <a href="pdf/tien-nguyen-resume.pdf" target="_blank" class="btn btn--green btn-lg mr-4">Download My CV</a>
+          <a href="pdf/tien-nguyen-cv.pdf" target="_blank" class="btn btn--green btn-lg mr-4">Download My CV</a>
           <a href="mailto:tiennguyen.ftu.k52@gmail.com" class="btn btn--blue btn-lg">Hire Me</a>
         </div>
       </div>
