compress bg video

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
   <!-- Meta Description -->
-  <meta name="description" content="Hi, I'm a full stack developer.I specialize in front-end, back-end & also cross platform development. I love to build producing high quality responsive websites and mobile applications.">
+  <meta name="description" content="Hi, I'm a full stack developer & freelancer.I specialize in front-end, back-end & also cross platform development. I love to build high quality responsive websites and mobile applications.">
   
   <!--Favicon-->
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -20,24 +20,24 @@
   
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Tien Nguyen - A full stack web developer">
-  <meta itemprop="description" content="Hi, I'm a full stack developer. I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction.">
-  <meta itemprop="image" content="http://tiennguyendev.me/assets/images/profile.jpg">
+  <meta itemprop="description" content="Hi, I'm a full stack developer & freelancer. I love to build high quality responsive websites and always pay attention for user experience & client satisfaction.">
+  <meta itemprop="image" content="http://tiennguyendev.me/images/profile.jpg">
   
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@publisher_handle">
   <meta name="twitter:title" content="Tien Nguyen | Full stack web developer">
-  <meta name="twitter:description" content="Hi, I'm a full stack developer. I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction.">
+  <meta name="twitter:description" content="Hi, I'm a full stack developer & freelancer. I love to build high quality responsive websites and always pay attention for user experience & client satisfaction.">
   <meta name="twitter:creator" content="@author_handle">
   <!-- Twitter summary card with large image must be at least 280x150px -->
-  <meta name="twitter:image:src" content="http://tiennguyendev.me/assets/images/profile.jpg">
+  <meta name="twitter:image:src" content="http://tiennguyendev.me/images/profile.jpg">
   
   <!-- Open Graph data -->
   <meta property="og:title" content="Tien Nguyen | Full stack developer" />
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="http://tiennguyendev.me/assets/images/profile.jpg" />
-  <meta property="og:image" content="http://example.com/image.jpg" />
-  <meta property="og:description" content="Hi, I'm a full stack developer. I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction." />
+  <meta property="og:url" content="http://tiennguyendev.me/" />
+  <meta property="og:image" content="http://tiennguyendev.me/images/screenshot.png" />
+  <meta property="og:description" content="Hi, I'm a full stack developer & freelancer. I love to build producing high quality responsive websites and always pay attention for user experience & client satisfaction." />
   <meta property="og:site_name" content="Tien Nguyen personal website" />
   
   <!--Styles-->
