--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
   
   <!--Footer-->
   <footer id="footer" class="footer section-box">
-    <div class="container text-sm-center">
+    <div class="container">
       <div class="row">
         <div class="col-md-6">
           <p>Copyright &copy; Tien Nguyen 2017. All rights reserved.</p>
